Fix a bug related with user image on small screen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1888,7 +1888,7 @@ a, a:hover {
     padding-left: 15px;
     padding-right: 15px; }
   .card .info {
-    width: 70%; }
+    width: 65%; }
     .card .info .flag-mini {
       width: 30px;
       margin: auto; }
