--- a/public/scss/theme/_home.scss
+++ b/public/scss/theme/_home.scss
@@ -494,7 +494,7 @@ a, a:hover {
   }
 
   .info {
-	width: 70%;
+	width: 65%;
 
 	.flag-mini {
 	  width: 30px;
